# STM32-CMAKE-FREERTOS

./: .mxproject  CMakeLists.txt  Makefile  README.md  TestFreeRTOSMake.ioc
Core/Src/: main.c
